# derrpy

./: CMakeLists.txt  README.md  dataerr.cpp  dataerr.h  derrpy.py  main.cpp  pyproject.toml  setup.py  unit.cpp  unit.h
